refactor HelloClassLoader class